# staff-control

./: CMakeLists.txt  README.md  main.cpp  postinst
.github/workflows/: build-deb.yml
configuration/: cfg.json
db/: staff-control.json
src/: main.cpp  staff_control.cpp  staff_control.hpp
systemd/: staff-control.service
